# zkID

./: .gitignore  .travis.yml  CMakeLists.txt  Identity.rdf  README.md  get_deps.sh  log.txt  notes.md  run_service.cpp  upload_merkle_tree.cpp
include/authentication/: zkMTA.h  zkMTACircuit.h  zkMTAClient.h  zkMTAEthereumGateway.h  zkMTAStructs.h  zkidMTA.h  zkidMTACircuit.h  zkidProofGadget.h
include/configuration/: ConfigCredentialsInterface.h  ConfigIPFSInterface.h  ConfigProverInterface.h  ConfigRPCServerInterface.h  ConfigZkidServiceInterface.h  ZkidConfiguration.h
include/credentials/: CredentialsManager.h
include/network/: AbstractZkidRPCServer.h  IPFSServiceController.h  ZkidRPCServer.h  ZkidService.h  zkidIPFSGateway.h
include/proving/: zkidCircuit.h  zkidIPFSGateway.h  zkidMTA.h  zkidMTACircuit.h  zkidMTProvider.h  zkidProofGadget.h  zkidProver.h  zkidProverImpl.h  zkidVerificationStructs.h
paper/: Identity.bib  paper.aux  paper.bbl  paper.blg  paper.tex
paper/auto/: paper.el
res/: ether_rpc_spec.json  proof.temp  verifier.sol  zkid_config.json  zkid_rpc_spec.json
src/: CMakeLists.txt  main.cpp
src/authentication/: zkMTAClient.cpp  zkMTAEthereumGateway.cpp  zkMerkleTreeAuthenticator.h  zkidMTA.cpp
src/configuration/: ZkidConfiguration.cpp
src/contracts/: ExampleContract.sol  ExampleIssuer.sol  Verifier.sol  issuer.sol  verifier.sol
src/contracts/contracts/: ExampleContract.sol  ExampleIssuer.sol  issuer.sol  verifier.sol
src/contracts/deployment/: deploy.js
src/contracts/migrations/: 2_deploy_contracts.js
src/credentials/: CredentialsManager.cpp
src/network/: IPFSServiceController.cpp  ZkidRPCServer.cpp  ZkidService.cpp  zkidIPFSGateway.cpp
src/proving/: keygen.cpp  zkidIPFSGateway.cpp  zkidMTA.cpp  zkidProverImpl.cpp
src/sol/: CredentialLib.sol
src/ui/: index.html
src/ui/css/: modal.css
src/ui/html/: modal.html
src/ui/js/: credentials.js  site.js  t.json  zkid.js  zkidclient.js
test/: CMakeLists.txt  cred.json  generate_credential.py  generate_sha256_gadget_tests.py  merkle_authentication_test.h  run_tests.cpp
test/authentication/: ProofFromCredentialRequest.cpp  ipfsTest.cpp  zkMerkelTreeAuthenticatorTest.cpp  zkMerkelTreeAuthenticatorTest.h
test/hashing/: generate_sha256_gadget_tests.py  sha_compress.py
test/res/: merkle_path_annon.txt  merkle_path_test_fail.json  merkle_path_test_pass.json  merkle_path_test_pass2.json  merkle_tree_ipfs.json  verification.sol  verification.sol.tmpl  zkid_config.json  zkid_test_config.json
test/res/credentials/: credentials.json  test_credential_proof.json  test_credential_proof_fail.json
test/res/proofs/: test_proof.json
util/: CMakeLists.txt  json_helpers.cpp  json_helpers.h  libsnark_helpers.cpp  libsnark_helpers.h  zk_identity_helpers.cpp  zk_identity_helpers.h  zkid_helpers.cpp  zkid_helpers.h
